fix: resolve the style violations